// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@keen/charts - circular chart utils createStackedSlice() should create "stack" from 3 slices 1`] = `
Array [
  Object {
    "color": "red",
    "selector": Array [
      0,
    ],
    "value": 100,
  },
  Object {
    "color": "blue",
    "selector": Array [
      1,
    ],
    "value": 100,
  },
  Object {
    "color": "#CDCFD3",
    "dataKey": "Others",
    "selector": Array [],
    "stack": Array [
      Object {
        "color": "yellow",
        "selector": Array [
          2,
        ],
      },
      Object {
        "color": "violet",
        "selector": Array [
          3,
        ],
      },
      Object {
        "color": "green",
        "selector": Array [
          4,
        ],
      },
    ],
    "stacked": true,
    "value": 10,
  },
]
`;

exports[`@keen/charts - circular chart utils createStackedSlice() should not create "stack" and return original slices 1`] = `
Array [
  Object {
    "color": "red",
    "selector": Array [
      0,
    ],
    "value": 100,
  },
  Object {
    "color": "blue",
    "selector": Array [
      1,
    ],
    "value": 100,
  },
  Object {
    "color": "yellow",
    "selector": Array [
      2,
    ],
    "value": 5,
  },
  Object {
    "color": "violet",
    "selector": Array [
      3,
    ],
    "value": 3,
  },
  Object {
    "color": "#CDCFD3",
    "dataKey": "Others",
    "selector": Array [],
    "stack": Array [
      Object {
        "color": "green",
        "selector": Array [
          4,
        ],
      },
    ],
    "stacked": true,
    "value": 2,
  },
]
`;

exports[`@keen/charts - circular chart utils generateCircularChart() should calculate position for labels placed "outer" of slice 1`] = `
Array [
  Object {
    "activePosition": Array [
      -14.795169021596411,
      -13.457450487458384,
    ],
    "color": "#85B4C3",
    "dataKey": "Books",
    "endAngle": 5.866829654294192,
    "index": "4",
    "label": "13.3%",
    "labelPosition": Array [
      -51.78309157558744,
      -47.101076706104344,
    ],
    "selector": Array [
      0,
    ],
    "stack": undefined,
    "stacked": undefined,
    "startAngle": 5.034118348523403,
  },
  Object {
    "activePosition": Array [
      -6.682083429947796,
      18.85072309051345,
    ],
    "color": "#487650",
    "dataKey": "Apps",
    "endAngle": 4.087855501056598,
    "index": "2",
    "label": "19.3%",
    "labelPosition": Array [
      -23.387292004817287,
      65.97753081679708,
    ],
    "selector": Array [
      1,
    ],
    "stack": undefined,
    "stacked": undefined,
    "startAngle": 2.876639056299088,
  },
  Object {
    "activePosition": Array [
      13.457450487458381,
      -14.795169021596415,
    ],
    "color": "#D95B24",
    "dataKey": "Games",
    "endAngle": 1.4761700420482162,
    "index": "0",
    "label": "23.5%",
    "labelPosition": Array [
      47.10107670610433,
      -51.78309157558745,
    ],
    "selector": Array [
      2,
    ],
    "stack": undefined,
    "stacked": undefined,
    "startAngle": 0,
  },
  Object {
    "activePosition": Array [
      -19.771211711837772,
      3.0164859432274804,
    ],
    "color": "#27566D",
    "dataKey": "Sounds",
    "endAngle": 5.034118348523403,
    "index": "3",
    "label": "15.1%",
    "labelPosition": Array [
      -69.19924099143219,
      10.557700801296182,
    ],
    "selector": Array [
      3,
    ],
    "stack": undefined,
    "stacked": undefined,
    "startAngle": 4.087855501056598,
  },
  Object {
    "activePosition": Array [
      16.4431202338962,
      11.385244704161323,
    ],
    "color": "#E29B1E",
    "dataKey": "Cars",
    "endAngle": 2.876639056299088,
    "index": "1",
    "label": "22.3%",
    "labelPosition": Array [
      57.55092081863669,
      39.84835646456463,
    ],
    "selector": Array [
      4,
    ],
    "stack": undefined,
    "stacked": undefined,
    "startAngle": 1.4761700420482162,
  },
  Object {
    "activePosition": Array [
      -5.963958220933314,
      -19.0900812554311,
    ],
    "color": "#A3444D",
    "dataKey": "Bikes",
    "endAngle": 6.093932737686226,
    "index": "5",
    "label": "3.6%",
    "labelPosition": Array [
      -20.873853773266603,
      -66.81528439400886,
    ],
    "selector": Array [
      5,
    ],
    "stack": undefined,
    "stacked": undefined,
    "startAngle": 5.866829654294192,
  },
  Object {
    "activePosition": Array [
      -1.8897026377606252,
      -19.91052545617118,
    ],
    "color": "#674AA9",
    "dataKey": "Movies",
    "endAngle": 6.283185307179586,
    "index": "6",
    "label": "3.0%",
    "labelPosition": Array [
      -6.613959232162188,
      -69.68683909659912,
    ],
    "selector": Array [
      6,
    ],
    "stack": undefined,
    "stacked": undefined,
    "startAngle": 6.093932737686226,
  },
]
`;

exports[`@keen/charts - circular chart utils generateCircularChart() should calculate properties for each arc 1`] = `
Array [
  Object {
    "activePosition": Array [
      -14.795169021596411,
      -13.457450487458384,
    ],
    "color": "#85B4C3",
    "dataKey": "Books",
    "endAngle": 5.866829654294192,
    "index": "4",
    "label": "13.3%",
    "labelPosition": Array [
      -40.68671480939013,
      -37.007988840510556,
    ],
    "selector": Array [
      0,
    ],
    "stack": undefined,
    "stacked": undefined,
    "startAngle": 5.034118348523403,
  },
  Object {
    "activePosition": Array [
      -6.682083429947796,
      18.85072309051345,
    ],
    "color": "#487650",
    "dataKey": "Apps",
    "endAngle": 4.087855501056598,
    "index": "2",
    "label": "19.3%",
    "labelPosition": Array [
      -18.37572943235644,
      51.839488498912,
    ],
    "selector": Array [
      1,
    ],
    "stack": undefined,
    "stacked": undefined,
    "startAngle": 2.876639056299088,
  },
  Object {
    "activePosition": Array [
      13.457450487458381,
      -14.795169021596415,
    ],
    "color": "#D95B24",
    "dataKey": "Games",
    "endAngle": 1.4761700420482162,
    "index": "0",
    "label": "23.5%",
    "labelPosition": Array [
      37.00798884051054,
      -40.68671480939014,
    ],
    "selector": Array [
      2,
    ],
    "stack": undefined,
    "stacked": undefined,
    "startAngle": 0,
  },
  Object {
    "activePosition": Array [
      -19.771211711837772,
      3.0164859432274804,
    ],
    "color": "#27566D",
    "dataKey": "Sounds",
    "endAngle": 5.034118348523403,
    "index": "3",
    "label": "15.1%",
    "labelPosition": Array [
      -54.37083220755387,
      8.29533634387557,
    ],
    "selector": Array [
      3,
    ],
    "stack": undefined,
    "stacked": undefined,
    "startAngle": 4.087855501056598,
  },
  Object {
    "activePosition": Array [
      16.4431202338962,
      11.385244704161323,
    ],
    "color": "#E29B1E",
    "dataKey": "Cars",
    "endAngle": 2.876639056299088,
    "index": "1",
    "label": "22.3%",
    "labelPosition": Array [
      45.218580643214544,
      31.30942293644364,
    ],
    "selector": Array [
      4,
    ],
    "stack": undefined,
    "stacked": undefined,
    "startAngle": 1.4761700420482162,
  },
  Object {
    "activePosition": Array [
      -5.963958220933314,
      -19.0900812554311,
    ],
    "color": "#A3444D",
    "dataKey": "Bikes",
    "endAngle": 6.093932737686226,
    "index": "5",
    "label": "3.6%",
    "labelPosition": Array [
      -16.400885107566616,
      -52.49772345243553,
    ],
    "selector": Array [
      5,
    ],
    "stack": undefined,
    "stacked": undefined,
    "startAngle": 5.866829654294192,
  },
  Object {
    "activePosition": Array [
      -1.8897026377606252,
      -19.91052545617118,
    ],
    "color": "#674AA9",
    "dataKey": "Movies",
    "endAngle": 6.283185307179586,
    "index": "6",
    "label": "3.0%",
    "labelPosition": Array [
      -5.196682253841719,
      -54.753945004470744,
    ],
    "selector": Array [
      6,
    ],
    "stack": undefined,
    "stacked": undefined,
    "startAngle": 6.093932737686226,
  },
]
`;
